--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -71,8 +71,15 @@ tkifm = @tkifm@
 
 bin_PROGRAMS = ifm
 
-ifm_SOURCES = ifm-driver.h ifm-main.c ifm-main.h ifm-map.c ifm-map.h	  ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l ifm-task.c ifm-task.h ifm-text.c ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h ifm-vars.c ifm-vars.h
+SRCS = ifm-dot.c ifm-main.c ifm-map.c ifm-parse.c ifm-path.c ifm-ps.c	 ifm-raw.c ifm-rec.c ifm-scan.c ifm-task.c ifm-text.c ifm-tk.c ifm-util.c ifm-vars.c
 
+
+HDRS = ifm-dot.h ifm-driver.h ifm-main.h ifm-map.h ifm-parse.h ifm-path.h ifm-ps.h ifm-raw.h ifm-rec.h ifm-task.h ifm-text.h ifm-tk.h ifm-util.h	  ifm-vars.h
+
+
+ifm_SOURCES = $(SRCS) $(HDRS)
+
+EXTRA_DIST = ifm-parse.y ifm-scan.l
 
 VARS = ../vars/src
 
@@ -93,33 +100,31 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I../etc
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-ifm_OBJECTS =  ifm-main.o ifm-map.o ifm-parse.o ifm-path.o ifm-ps.o \
-ifm-raw.o ifm-rec.o ifm-scan.o ifm-task.o ifm-text.o ifm-tk.o \
+ifm_OBJECTS =  ifm-dot.o ifm-main.o ifm-map.o ifm-parse.o ifm-path.o \
+ifm-ps.o ifm-raw.o ifm-rec.o ifm-scan.o ifm-task.o ifm-text.o ifm-tk.o \
 ifm-util.o ifm-vars.o
 ifm_DEPENDENCIES = 
-LEX_OUTPUT_ROOT = @LEX_OUTPUT_ROOT@
-LEXLIB = @LEXLIB@
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
-DIST_COMMON =  Makefile.am Makefile.in ifm-parse.c ifm-scan.c
+DIST_COMMON =  Makefile.am Makefile.in
 
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = gtar
 GZIP_ENV = --best
-DEP_FILES =  .deps/ifm-main.P .deps/ifm-map.P .deps/ifm-parse.P \
-.deps/ifm-path.P .deps/ifm-ps.P .deps/ifm-raw.P .deps/ifm-rec.P \
-.deps/ifm-scan.P .deps/ifm-task.P .deps/ifm-text.P .deps/ifm-tk.P \
-.deps/ifm-util.P .deps/ifm-vars.P
+DEP_FILES =  .deps/ifm-dot.P .deps/ifm-main.P .deps/ifm-map.P \
+.deps/ifm-parse.P .deps/ifm-path.P .deps/ifm-ps.P .deps/ifm-raw.P \
+.deps/ifm-rec.P .deps/ifm-scan.P .deps/ifm-task.P .deps/ifm-text.P \
+.deps/ifm-tk.P .deps/ifm-util.P .deps/ifm-vars.P
 SOURCES = $(ifm_SOURCES)
 OBJECTS = $(ifm_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
-.SUFFIXES: .S .c .l .o .s .y
+.SUFFIXES: .S .c .o .s
 $(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu src/Makefile
 
@@ -172,15 +177,6 @@ maintainer-clean-compile:
 ifm: $(ifm_OBJECTS) $(ifm_DEPENDENCIES)
 	@rm -f ifm
 	$(LINK) $(ifm_LDFLAGS) $(ifm_OBJECTS) $(ifm_LDADD) $(LIBS)
-.l.c:
-	$(LEX) $(AM_LFLAGS) $(LFLAGS) $< && mv $(LEX_OUTPUT_ROOT).c $@
-.y.c:
-	$(YACC) $(AM_YFLAGS) $(YFLAGS) $< && mv y.tab.c $*.c
-	if test -f y.tab.h; then \
-	if cmp -s y.tab.h $*.h; then rm -f y.tab.h; else mv y.tab.h $*.h; fi; \
-	else :; fi
-ifm-parse.h: ifm-parse.c
-
 
 tags: TAGS
 
@@ -224,7 +220,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
@@ -299,7 +295,6 @@ distclean-generic:
 	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
 
 maintainer-clean-generic:
-	-test -z "ifm-scanlifm-parsehifm-parsec" || rm -f ifm-scanl ifm-parseh ifm-parsec
 mostlyclean-am:  mostlyclean-binPROGRAMS mostlyclean-compile \
 		mostlyclean-tags mostlyclean-depend mostlyclean-generic
 
