--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -9,6 +9,8 @@
 # but WITHOUT ANY WARRANTY, to the extent permitted by law; without
 # even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 # PARTICULAR PURPOSE.
+
+# Main target.
 
 
 SHELL = @SHELL@
@@ -27,6 +29,7 @@ sysconfdir = @sysconfdir@
 sharedstatedir = @sharedstatedir@
 localstatedir = @localstatedir@
 libdir = @libdir@
+infodir = @infodir@
 mandir = @mandir@
 includedir = @includedir@
 oldincludedir = /usr/include
@@ -68,25 +71,53 @@ YACC = @YACC@
 scr2ifm = @scr2ifm@
 tkifm = @tkifm@
 
-SRCS = ifm-top.pod ifm-desc.pod ifm-oper.pod ifm-map.pod ifm-task.pod	ifm-out.pod ifm-lang.pod ifm-diag.pod ifm-bot.pod
+# General rules.
+
+SUFFIXES = .lyx .ps .tex .aux .pdf .eps .dia
+
+HTML_TITLE = IFM Version $(VERSION)
+
+HTML_ADDRESS = zondo@pillock.freeserve.co.uk
+
+HTML_DIR = ifm
+
+HTML_SPLIT = 5
+
+HTML_LINK = 5
+
+HTML_DISP = -split $(HTML_SPLIT) -link $(HTML_LINK) -show_section_numbers -html_version 4.0
 
 
-infodir = $(prefix)/info
+HTML_IMAGE = -no_external_images -local_icons -white -image_type gif
 
-info_DATA = ifm.info
+HTML_NAV = -next_page_in_navigation
 
-EXTRA_DIST = ifm.info ifm.txt ifm.html
+HTML_TEXT = -title "$(HTML_TITLE)" -address "$(HTML_ADDRESS)" -font_size 12pt
 
-ETAGS_ARGS = -l none -r '/^=head.[ \t]+\(.+\)/\1/' $(SRCS)
+HTML_FILE = -dir $(HTML_DIR) -mkdir 
 
-TAGS_DEPENDENCIES = $(SRCS)
+LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) $(HTML_TEXT) $(HTML_LOCAL)
 
-CLEANFILES = *cache
+
+# Installation stuff.
+
+DOC_DIR = $(pkgdatadir)
+
+# Distribution stuff.
+
+EXTRA_DIST = ifm.lyx map.dia map.eps
+
+# Cleaning stuff.
+
+CLEAN_DOC = *.ps *.eps *.pdf
+CLEAN_TEX = ifm.tex *.aux *.dvi *.lof *.lot *.log *.toc *.out
 mkinstalldirs = $(SHELL) $(top_srcdir)/etc/mkinstalldirs
 CONFIG_HEADER = ../etc/config.h
 CONFIG_CLEAN_FILES = 
-DATA =  $(info_DATA)
-
+CFLAGS = @CFLAGS@
+COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
+CCLD = $(CC)
+LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(LDFLAGS) -o $@
 DIST_COMMON =  Makefile.am Makefile.in
 
 
@@ -96,6 +127,7 @@ TAR = gtar
 GZIP_ENV = --best
 all: all-redirect
 .SUFFIXES:
+.SUFFIXES: .aux .dia .eps .lyx .pdf .ps .tex
 $(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu doc/Makefile
 
@@ -103,54 +135,9 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$(subdir)/$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
-
-install-infoDATA: $(info_DATA)
-	@$(NORMAL_INSTALL)
-	$(mkinstalldirs) $(DESTDIR)$(infodir)
-	@list='$(info_DATA)'; for p in $$list; do \
-	  if test -f $(srcdir)/$$p; then \
-	    echo " $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(infodir)/$$p"; \
-	    $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(infodir)/$$p; \
-	  else if test -f $$p; then \
-	    echo " $(INSTALL_DATA) $$p $(DESTDIR)$(infodir)/$$p"; \
-	    $(INSTALL_DATA) $$p $(DESTDIR)$(infodir)/$$p; \
-	  fi; fi; \
-	done
-
-uninstall-infoDATA:
-	@$(NORMAL_UNINSTALL)
-	list='$(info_DATA)'; for p in $$list; do \
-	  rm -f $(DESTDIR)$(infodir)/$$p; \
-	done
-
 tags: TAGS
+TAGS:
 
-ID: $(HEADERS) $(SOURCES) $(LISP)
-	list='$(SOURCES) $(HEADERS)'; \
-	unique=`for i in $$list; do echo $$i; done | \
-	  awk '    { files[$$0] = 1; } \
-	       END { for (i in files) print i; }'`; \
-	here=`pwd` && cd $(srcdir) \
-	  && mkid -f$$here/ID $$unique $(LISP)
-
-TAGS:  $(HEADERS) $(SOURCES)  $(TAGS_DEPENDENCIES) $(LISP)
-	tags=; \
-	here=`pwd`; \
-	list='$(SOURCES) $(HEADERS)'; \
-	unique=`for i in $$list; do echo $$i; done | \
-	  awk '    { files[$$0] = 1; } \
-	       END { for (i in files) print i; }'`; \
-	test -z "$(ETAGS_ARGS)$$unique$(LISP)$$tags" \
-	  || (cd $(srcdir) && etags $(ETAGS_ARGS) $$tags  $$unique $(LISP) -o $$here/TAGS)
-
-mostlyclean-tags:
-
-clean-tags:
-
-distclean-tags:
-	-rm -f TAGS ID
-
-maintainer-clean-tags:
 
 distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 
@@ -165,13 +152,14 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
 	    || cp -p $$d/$$file $(distdir)/$$file || :; \
 	  fi; \
 	done
+	$(MAKE) $(AM_MAKEFLAGS) top_distdir="$(top_distdir)" distdir="$(distdir)" dist-hook
 info-am:
 info: info-am
 dvi-am:
@@ -183,71 +171,114 @@ installcheck: installcheck-am
 install-exec-am:
 install-exec: install-exec-am
 
-install-data-am: install-infoDATA
+install-data-am:
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) install-data-hook
 install-data: install-data-am
 
 install-am: all-am
 	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
 install: install-am
-uninstall-am: uninstall-infoDATA
+uninstall-am:
 uninstall: uninstall-am
-all-am: Makefile $(DATA)
+all-am: Makefile
 all-redirect: all-am
 install-strip:
 	$(MAKE) $(AM_MAKEFLAGS) AM_INSTALL_PROGRAM_FLAGS=-s install
 installdirs:
-	$(mkinstalldirs)  $(DESTDIR)$(infodir)
 
 
 mostlyclean-generic:
 
 clean-generic:
-	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-rm -f Makefile $(CONFIG_CLEAN_FILES)
 	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
 
 maintainer-clean-generic:
-mostlyclean-am:  mostlyclean-tags mostlyclean-generic
+mostlyclean-am:  mostlyclean-generic
 
 mostlyclean: mostlyclean-am
 
-clean-am:  clean-tags clean-generic mostlyclean-am
+clean-am:  clean-generic mostlyclean-am
 
 clean: clean-am
 
-distclean-am:  distclean-tags distclean-generic clean-am
+distclean-am:  distclean-generic clean-am distclean-local
 
 distclean: distclean-am
 
-maintainer-clean-am:  maintainer-clean-tags maintainer-clean-generic \
-		distclean-am
+maintainer-clean-am:  maintainer-clean-generic distclean-am
 	@echo "This command is intended for maintainers to use;"
 	@echo "it deletes files that may require special tools to rebuild."
 
 maintainer-clean: maintainer-clean-am
 
-.PHONY: uninstall-infoDATA install-infoDATA tags mostlyclean-tags \
-distclean-tags clean-tags maintainer-clean-tags distdir info-am info \
-dvi-am dvi check check-am installcheck-am installcheck install-exec-am \
-install-exec install-data-am install-data install-am install \
-uninstall-am uninstall all-redirect all-am all installdirs \
-mostlyclean-generic distclean-generic clean-generic \
-maintainer-clean-generic clean mostlyclean distclean maintainer-clean
+.PHONY: tags distdir info-am info dvi-am dvi check check-am \
+installcheck-am installcheck install-exec-am install-exec \
+install-data-am install-data install-am install uninstall-am uninstall \
+all-redirect all-am all installdirs mostlyclean-generic \
+distclean-generic clean-generic maintainer-clean-generic clean \
+mostlyclean distclean maintainer-clean
 
 
-all: ifm.info
+doc: fig ps html
 
-@common_rules@
+pdf: ifm.pdf
 
-doc: $(SRCS)
-	@ rm -f ifm.pod
-	@ for i in $(SRCS); do \
-		echo Adding $$i; \
-		echo >> ifm.pod; \
-		$(CONFIG) $$i | podpp >> ifm.pod; \
-	done
+ps: ifm.ps
+
+fig: map.eps
+
+.lyx.ps:;	lyx --export ps $< > $@
+.lyx.tex:;	lyx --export latex $< > $@
+.ps.gv:;	gv -a4 -magstep -1 -spartan $<
+.tex.aux:;	latex $<; latex $<; latex $<
+.lyx.pdf:;	tex2pdf $<
+.dia.eps:;	dia -e $@ $<
+
+# Stuff for generating HTML.
+
+.PHONY: html
+
+html: ifm.tex ifm.aux
+	$(LATEX2HTML) ifm.tex
+
+install-doc:
+	@ if test -d $(srcdir)/$(HTML_DIR); then			\
+	   thisdir=`pwd`;						\
+	   docdir=`basename $$thisdir`;					\
+	   $(mkinstalldirs) $(DOC_DIR);					\
+	   cmd="rm -rf $(DOC_DIR)/$$docdir";				\
+	   echo $$cmd;							\
+	   eval $$cmd;							\
+	   cmd="cp -r $(srcdir)/$(HTML_DIR) $(DOC_DIR)/$$docdir";	\
+	   echo $$cmd;							\
+	   eval $$cmd;							\
+	fi
+
+dist-doc: $(EXTRA_DIST)
+	if test -d $(srcdir)/$(HTML_DIR); then				\
+	   cp -r $(srcdir)/$(HTML_DIR) $(distdir);			\
+	fi
+
+clean-doc: realclean
+
+realclean: htmlclean
+	rm -rf $(FILES)
+
+htmlclean:; rm -rf $(HTML_DIR) $(CLEAN_TEX)
+
+# Other stuff.
+
+distclean-local: clean-doc
+
+install-data-hook: install-doc
+
+dist-hook: dist-doc
+
+edit:; lyx ifm.lyx
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
