--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -79,7 +79,7 @@ HTML_TITLE = IFM Version $(VERSION)
 
 HTML_ADDRESS = zondo@pillock.freeserve.co.uk
 
-HTML_DIR = ifm
+HTML_DIR = html
 
 HTML_SPLIT = 5
 
@@ -105,7 +105,7 @@ DOC_DIR = $(pkgdatadir)
 
 # Distribution stuff.
 
-EXTRA_DIST = ifm.lyx map.dia map.eps
+EXTRA_DIST = ifm.pdf
 
 # Cleaning stuff.
 
