--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -93,7 +93,8 @@ DOC_DIR = $(pkgdatadir)
 
 # Distribution stuff.
 
-EXTRA_DIST = ifm.pdf
+EXTRA_DIST = ifm.pdf ifm.lyx advent.cmd advent.ifm advent1.scr advent2.scr advent3.scr advent4.scr advent5.scr advent6.scr advent7.scr map.dia	   tkifm.txt
+
 
 # Cleaning stuff.
 
@@ -211,7 +212,7 @@ distclean-generic clean-generic maintainer-clean-generic clean \
 mostlyclean distclean maintainer-clean
 
 
-doc: fig ps html
+doc: fig pdf html
 
 pdf: ifm.pdf
 
