--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -83,8 +83,9 @@ HTML_IMAGE = -no_external_images -local_icons -white -image_type gif
 HTML_NAV = -next_page_in_navigation
 HTML_TEXT = -title "$(HTML_TITLE)" -address "$(HTML_ADDR)" -font_size 12pt
 HTML_FILE = -dir $(HTML_DIR) -mkdir 
+HTML_EXTRA = -short_extn
 
-LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) $(HTML_TEXT) $(HTML_LOCAL)
+LATEX2HTML = latex2html $(HTML_DISP) $(HTML_IMAGE) $(HTML_NAV) $(HTML_FILE) $(HTML_TEXT) $(HTML_EXTRA)
 
 
 # Installation stuff.
@@ -231,7 +232,7 @@ fig: map.eps
 
 .PHONY: html
 
-html: ifm.tex ifm.aux
+html: fig ifm.tex ifm.aux
 	$(LATEX2HTML) ifm.tex
 
 install-doc:
@@ -255,7 +256,7 @@ dist-doc: $(EXTRA_DIST)
 clean-doc: realclean
 
 realclean: htmlclean
-	rm -rf $(FILES)
+	rm -rf $(CLEAN_DOC)
 
 htmlclean:; rm -rf $(HTML_DIR) $(CLEAN_TEX)
 
