--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl Configuration template for IFM, in -*- m4 -*- mode.
+dnl Configuration template for IFM.
 
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/ifm-main.c)
@@ -49,15 +49,9 @@ AC_CYGWIN
 
 dnl Check whether to install vars library.
 AC_ARG_ENABLE(vars-install,
-[  --enable-vars-install   Install vars support library],
-[case "${enableval}" in
-  yes) install_vars=yes ;;
-  no)  install_vars=no  ;;
-  *)   AC_MSG_ERROR(bad value ${enableval} for --enable-vars-install) ;;
-esac],[install_vars=no])
-
-AC_CACHE_CHECK(whether to install support library, ac_cv_install_vars,
-[ac_cv_install_vars=$install_vars])
+AC_HELP_STRING(--enable-vars-install, install vars support library),
+VARS_INSTALL=$enableval, VARS_INSTALL=no)
+export VARS_INSTALL
 
 dnl Write Makefiles.
 AC_OUTPUT(
