--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -83,7 +83,7 @@ EXTRA_DIST = ifm-parse.c ifm-scan.c
 
 VARS = ../vars/src
 
-ifm_LDADD = -lvars-local
+ifm_LDADD = -lvars
 
 ifm_LDFLAGS = -L$(VARS)
 
@@ -344,7 +344,7 @@ mostlyclean-generic distclean-generic clean-generic \
 maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
 
-$(bin_PROGRAMS): $(VARS)/libvars-local.a
+$(bin_PROGRAMS): $(VARS)/libvars.a
 
 ifm-parse.h: ifm-parse.c
 
